# second-brain

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  README.md  check_db.py  check_links.py  migrate_to_atlas.py  pyproject.toml  requirements.txt  run.py  test_quiz_import.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  analytics.py  books.py  documents.py  graph.py  links.py  nodes.py  query.py  quiz.py
backend/app/db/: __init__.py  mongodb.py  vector_db.py
backend/app/models/: __init__.py  link.py  node.py  query.py  quiz.py
backend/app/services/: __init__.py  document_parser.py  embedding_service.py  gemini_service.py  graph_service.py  rag_service.py
backend/scripts/: clear_database.py  reindex_embeddings.py  seed_database.py
second-brain-ui/: .env.example  eslint_output.json  index.html  package-lock.json  package.json
second-brain-ui/src/: App.jsx  index.css  main.jsx
second-brain-ui/src/components/: QuizDashboard.jsx
second-brain-ui/src/services/: api.js
